<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/app_heading"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStartCoroutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:text="@string/run_coroutine_task" />

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:text="@string/run_foreground_service_task" />

    <Button
        android:id="@+id/btnBlockingDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:text="@string/blocking_delay" />

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:hint="@string/shows_ui_blocking"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:text="" />

    <Button
        android:id="@+id/btnCallService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="28sp"
        android:text="@string/call_to_service"
        android:onClick="getTimeFromService"
        />

</LinearLayout>
